tests/error/if_input.ca.output
Error occurred:
[tests/error/if_input.ca:1,0] if()
[tests/error/if_input.ca:1,3] value() | Case expected bool input, found: 1

